DigicielFull/force-app/main/default/objects/amc__Contributor__c/amc__Contributor__c.object-meta.xml
<CustomObject>
    <description>Child to the Action Object. It will enable additional Role(s) to be assigned to an Action to indicate they will be assisting the main Action Owner.</description>
    <label>Contributor</label>
    <nameField>
        <displayFormat>CON{0}</displayFormat>
        <label>Contributor Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Contributors</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>