DigicielFull/force-app/main/default/objects/amc__Contributor__c/fields/amc__Action__c.field-meta.xml
<CustomField>
    <fullName>amc__Action__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Links to the Action record</description>
    <inlineHelpText>Links to the Action record</inlineHelpText>
    <label>Action</label>
    <referenceTo>amc__Action__c</referenceTo>
    <relationshipLabel>Contributors</relationshipLabel>
    <relationshipName>Contributors</relationshipName>
    <type>Lookup</type>
</CustomField>