DigicielFull/force-app/main/default/objects/amc__Contributor__c/fields/amc__Contribution_Billable__c.field-meta.xml
<CustomField>
    <fullName>amc__Contribution_Billable__c</fullName>
    <description>Identifies the number of the biilable hours this Contributor will be responsible for</description>
    <inlineHelpText>Identifies the number of the billable hours this Contributor will be responsible for</inlineHelpText>
    <label>Contribution Billable</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>