DigicielFull/force-app/main/default/objects/amc__Contributor__c/fields/amc__Contribution_Total__c.field-meta.xml
<CustomField>
    <fullName>amc__Contribution_Total__c</fullName>
    <description>Identifies the number of total hours this Contributor will be responsible for</description>
    <formula>amc__Contribution_Billable__c + amc__Contribution_Non_Billable__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Identifies the number of total hours this Contributor will be responsible for</inlineHelpText>
    <label>Contribution Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>