DigicielFull/force-app/main/default/objects/amc__Contributor__c/fields/amc__End_Date__c.field-meta.xml
<CustomField>
    <fullName>amc__End_Date__c</fullName>
    <inlineHelpText>Identifies the End Date of the Contributors involvement in the Action</inlineHelpText>
    <label>End Date</label>
    <type>Date</type>
</CustomField>