DigicielFull/force-app/main/default/objects/amc__Contributor__c/fields/amc__Exclude_from_Timesheet_Indicator__c.field-meta.xml
<CustomField>
    <fullName>amc__Exclude_from_Timesheet_Indicator__c</fullName>
    <formula>IF(amc__Action__r.amc__Exclude_from_Timesheet_Indicator__c = TRUE, TRUE, amc__Exclude_from_Timesheet__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Prevents Actions from appearing on the Timesheet for this Contributor</inlineHelpText>
    <label>Exclude from Timesheet Indicator</label>
    <type>Checkbox</type>
</CustomField>