DigicielFull/force-app/main/default/objects/amc__Contributor__c/fields/amc__Hours_Completed_Non_Billable__c.field-meta.xml
<CustomField>
    <fullName>amc__Hours_Completed_Non_Billable__c</fullName>
    <defaultValue>0</defaultValue>
    <inlineHelpText>Identifies the number of non billable hours this Contributor has logged against the Action</inlineHelpText>
    <label>Hours Completed - Non Billable</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>