DigicielFull/force-app/main/default/objects/amc__Contributor__c/fields/amc__Hours_Remaining_Non_Billable__c.field-meta.xml
<CustomField>
    <fullName>amc__Hours_Remaining_Non_Billable__c</fullName>
    <formula>amc__Contribution_Non_Billable__c  -  amc__Hours_Completed_Non_Billable__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Formula: Identifies the Hours Remaining - Non Billable value (&apos;Contribution Non Billable&apos; - &apos;Hours Completed - Non Billable&apos;)</inlineHelpText>
    <label>Hours Remaining - Non Billable</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>