DigicielFull/force-app/main/default/objects/amc__Contributor__c/fields/amc__Projected_Non_Billable_Contribution__c.field-meta.xml
<CustomField>
    <fullName>amc__Projected_Non_Billable_Contribution__c</fullName>
    <formula>amc__Hours_Completed_Non_Billable__c + amc__Projected_Non_Billable_Remaining__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Projected Non Billable Contribution</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>