DigicielFull/force-app/main/default/objects/amc__Contributor__c/fields/amc__Projected_Non_Billable_Remaining__c.field-meta.xml
<CustomField>
    <fullName>amc__Projected_Non_Billable_Remaining__c</fullName>
    <formula>IF(AND(amc__Hours_Completed_Non_Billable__c &gt; 0, amc__Action__r.amc__Completion_Percent__c &gt; 0), (amc__Hours_Completed_Non_Billable__c / amc__Action__r.amc__Completion_Percent__c)-amc__Hours_Completed_Non_Billable__c , amc__Hours_Remaining_Non_Billable__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Projected Non Billable Remaining</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>