DigicielFull/force-app/main/default/objects/amc__Contributor__c/fields/amc__Projected_Total_Contribution__c.field-meta.xml
<CustomField>
    <fullName>amc__Projected_Total_Contribution__c</fullName>
    <formula>amc__Total_Hours_Completed__c + amc__Projected_Contribution_Remaining__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Projected Total Contribution</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>