DigicielFull/force-app/main/default/objects/amc__Contributor__c/fields/amc__Role__c.field-meta.xml
<CustomField>
    <fullName>amc__Role__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Links to the Role record of the person contributing to this Action</description>
    <inlineHelpText>Links to the Role record of the person contributing to this Action</inlineHelpText>
    <label>Role</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>amc__Role__c.amc__Active__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>amc__Role__c</referenceTo>
    <relationshipLabel>Contributors</relationshipLabel>
    <relationshipName>Contributors</relationshipName>
    <type>Lookup</type>
</CustomField>