DigicielFull/force-app/main/default/objects/amc__Contributor__c/validationRules/amc__Contributor_Date_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>amc__Contributor_Date_Validation</fullName>
    <active>true</active>
    <description>The contributor start and end dates must fall within the parent action&apos;s date range</description>
    <errorConditionFormula>OR(
amc__Start_Date__c &gt; amc__End_Date__c,
amc__End_Date__c &gt; amc__Action__r.amc__End_Date__c,
amc__End_Date__c &lt; amc__Action__r.amc__Start_Date__c,
amc__Start_Date__c &gt; amc__Action__r.amc__End_Date__c,
amc__Start_Date__c &lt; amc__Action__r.amc__Start_Date__c
)</errorConditionFormula>
    <errorMessage>The contributor start and end date must fall within the action&apos;s date range.</errorMessage>
</ValidationRule>